# kalman_foundations

./: .gitignore  CMakeLists.txt  README.md
src/: ekf_ukf_demo.cpp  main.cpp  quaternion_demo.cpp
src/bayesian/: KalmanFilter.hpp
src/ekf/: ExtendedKalmanFilter.hpp
src/geometric/: KalmanFilter.hpp
src/gui/: main_gui.cpp
src/optimal_observer/: KalmanFilter.hpp
src/quaternion_ekf/: QuaternionEKF.hpp
src/quaternion_ukf/: QuaternionUKF.hpp
src/statistical/: KalmanFilter.hpp
src/ukf/: UnscentedKalmanFilter.hpp
